--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -117,13 +117,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1416,Y=1488)
+LastSize=(X=1425,Y=1488)
 LastExecutedLaunchDevice=Windows@DESKTOP-D436PMB
 LastExecutedLaunchName=DESKTOP-D436PMB
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1416
+NewWindowWidth=1425
 NewWindowHeight=1488
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=451,Y=173)
@@ -1062,7 +1062,7 @@ CS_FastVehicle_C.CameraShakePattern=True
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Location\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.X\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Y\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Z\" \"Object.CameraShakePattern.RootShakePattern.Object.Timing\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -2505,4 +2505,10 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
+
+[MessageLog]
+LastLogListing=SourceControl
+
+[OutputLog]
+PreferredCommandExecutor=Cmd
 
