prepared to add 'add time' function

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,7 @@ bInvertMouseLookYAxis=True
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldPartitionRuntimeSpatialHash=
 EditorStyleSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 SlateThemeManager=
 AudioEditorSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
@@ -244,12 +244,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/VehicleTemplate/Maps/VehicleExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/RacingGame/Framework/GM_RacingGame.GM_RacingGame
 OpenAssetsAtExit=/Game/RacingGame/Checkpoints/BP_Checkpoint.BP_Checkpoint
 OpenAssetsAtExit=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_Pawn.SportsCar_Pawn
-OpenAssetsAtExit=/Game/RacingGame/CameraShakes/CS_FastVehicle.CS_FastVehicle
 
 [WindowsEditor]
 SuppressMissingAdvancedRenderingRequirementsNotification=True
@@ -1058,6 +1057,9 @@ NewCameraShakeBase_C.CameraShake=True
 NewCameraShakeBase_C.CameraShakePattern=True
 CS_FastVehicle_C.CameraShake=True
 CS_FastVehicle_C.CameraShakePattern=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1267,12 +1269,14 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/VehicleTemplate/Maps/VehicleExampleMap.VehicleExampleMap", ()))
 
 [AssetEditorToolkitTabLocation]
-/Game/RacingGame/Framework/GM_RacingGame.GM_RacingGame=1
+/Game/RacingGame/Framework/GM_RacingGame.GM_RacingGame=0
 /Game/VehicleTemplate/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode=0
 /Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsFront.SportsCar_WheelsFront=0
 /Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsRear.SportsCar_WheelsRear=0
 /Game/VehicleTemplate/Blueprints/VehicleUI.VehicleUI=0
 /Game/RacingGame/CameraShakes/CS_FastVehicle.CS_FastVehicle=0
+/Game/RacingGame/Checkpoints/BP_Checkpoint.BP_Checkpoint=0
+/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_Pawn.SportsCar_Pawn=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1319,9 +1323,9 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=100.667 Y=154.000
-WindowSize=X=1282.000 Y=722.000
-InitiallyMaximized=False
+ScreenPosition=X=180.000 Y=162.667
+WindowSize=X=1284.000 Y=724.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2353,6 +2357,8 @@ MovieSceneCapture.TimeStamp=2023.03.15-21.32.35
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2023.03.15-21.32.30
 BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.03.15-21.32.37
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
