add time in checkpoints added

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,7 @@ bInvertMouseLookYAxis=True
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
 EditorStyleSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 SlateThemeManager=
 AudioEditorSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
@@ -244,11 +244,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/VehicleTemplate/Maps/VehicleExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/RacingGame/Framework/GM_RacingGame.GM_RacingGame
-OpenAssetsAtExit=/Game/RacingGame/Checkpoints/BP_Checkpoint.BP_Checkpoint
-OpenAssetsAtExit=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_Pawn.SportsCar_Pawn
 
 [WindowsEditor]
 SuppressMissingAdvancedRenderingRequirementsNotification=True
@@ -1245,14 +1243,14 @@ CameraShakeBase="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Obj
 CS_FastVehicle_C="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Location\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.X\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Y\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Z\" \"Object.CameraShakePattern.RootShakePattern.Object.Timing\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RacingGame/CameraShakes/CS_FastVehicle
-MRUItem1=/Game/RacingGame/CameraShakes/NewCameraShakeBase
-MRUItem2=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsRear
-MRUItem3=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsFront
-MRUItem4=/Game/VehicleTemplate/Blueprints/VehicleUI
-MRUItem5=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_Pawn
-MRUItem6=/Game/RacingGame/Checkpoints/BP_Checkpoint
-MRUItem7=/Game/RacingGame/Framework/GM_RacingGame
+MRUItem0=/Game/RacingGame/Framework/GM_RacingGame
+MRUItem1=/Game/RacingGame/CameraShakes/CS_FastVehicle
+MRUItem2=/Game/RacingGame/CameraShakes/NewCameraShakeBase
+MRUItem3=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsRear
+MRUItem4=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsFront
+MRUItem5=/Game/VehicleTemplate/Blueprints/VehicleUI
+MRUItem6=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_Pawn
+MRUItem7=/Game/RacingGame/Checkpoints/BP_Checkpoint
 MRUItem8=/Game/VehicleTemplate/Blueprints/VehicleAdvGameMode
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
