dodawanie czasu gdy przejazd przez checkpoint

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=451,Y=173)
+NewWindowPosition=(X=476,Y=133)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -117,16 +117,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1425,Y=1488)
+LastSize=(X=1461,Y=1418)
 LastExecutedLaunchDevice=Windows@DESKTOP-D436PMB
 LastExecutedLaunchName=DESKTOP-D436PMB
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1425
-NewWindowHeight=1488
+NewWindowWidth=1461
+NewWindowHeight=1418
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-MultipleInstancePositions=(X=451,Y=173)
+MultipleInstancePositions=(X=476,Y=133)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -247,6 +247,7 @@ LastLevel=/Game/VehicleTemplate/Maps/VehicleExampleMap
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/RacingGame/Framework/GM_RacingGame.GM_RacingGame
+OpenAssetsAtExit=/Game/VehicleTemplate/Blueprints/VehicleUI.VehicleUI
 
 [WindowsEditor]
 SuppressMissingAdvancedRenderingRequirementsNotification=True
@@ -1058,6 +1059,41 @@ CS_FastVehicle_C.CameraShakePattern=True
 EdGraph.Graph=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+Overlay.Behavior=True
+Overlay.Accessibility=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+Overlay.Localization=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=False
+HorizontalBox.Render Transform=False
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1241,14 +1277,19 @@ CameraShakeSourceComponent="\"Object\" "
 NewCameraShakeBase_C="\"Object\" "
 CameraShakeBase="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Location\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.X\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Y\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Z\" \"Object.CameraShakePattern.RootShakePattern.Object.Timing\" "
 CS_FastVehicle_C="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Location\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.X\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Y\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Z\" \"Object.CameraShakePattern.RootShakePattern.Object.Timing\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
+Overlay="\"Object\" "
+PanelWidget="\"Object\" "
+HorizontalBox="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RacingGame/Framework/GM_RacingGame
-MRUItem1=/Game/RacingGame/CameraShakes/CS_FastVehicle
-MRUItem2=/Game/RacingGame/CameraShakes/NewCameraShakeBase
-MRUItem3=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsRear
-MRUItem4=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsFront
-MRUItem5=/Game/VehicleTemplate/Blueprints/VehicleUI
+MRUItem0=/Game/VehicleTemplate/Blueprints/VehicleUI
+MRUItem1=/Game/RacingGame/Framework/GM_RacingGame
+MRUItem2=/Game/RacingGame/CameraShakes/CS_FastVehicle
+MRUItem3=/Game/RacingGame/CameraShakes/NewCameraShakeBase
+MRUItem4=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsRear
+MRUItem5=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_WheelsFront
 MRUItem6=/Game/VehicleTemplate/Blueprints/SportsCar/SportsCar_Pawn
 MRUItem7=/Game/RacingGame/Checkpoints/BP_Checkpoint
 MRUItem8=/Game/VehicleTemplate/Blueprints/VehicleAdvGameMode
@@ -2440,6 +2481,7 @@ Advanced=False
 
 [DetailCategoriesAdvanced]
 SpringArmComponent.Lag=True
+K2Node_VariableGet.Variable=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
