--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -117,14 +117,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1461,Y=1418)
+LastSize=(X=1494,Y=1488)
 LastExecutedLaunchDevice=Windows@DESKTOP-D436PMB
 LastExecutedLaunchName=DESKTOP-D436PMB
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1461
-NewWindowHeight=1418
+NewWindowWidth=1494
+NewWindowHeight=1488
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=476,Y=133)
 
@@ -239,6 +239,8 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+SequencerAssetPicker.ThumbnailSize=2
+SequencerAssetPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/VehicleTemplate/Maps/VehicleExampleMap
@@ -1094,11 +1096,19 @@ K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1266,8 +1276,8 @@ CameraComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 VehicleUI_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 ChaosWheeledVehicleMovementComponent="\"Object\" "
 ChaosVehicleMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
@@ -1277,11 +1287,12 @@ CameraShakeSourceComponent="\"Object\" "
 NewCameraShakeBase_C="\"Object\" "
 CameraShakeBase="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Location\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.X\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Y\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Z\" \"Object.CameraShakePattern.RootShakePattern.Object.Timing\" "
 CS_FastVehicle_C="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Location\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.X\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Y\" \"Object.CameraShakePattern.RootShakePattern.Object.Location.Z\" \"Object.CameraShakePattern.RootShakePattern.Object.Timing\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
-Overlay="\"Object\" "
-PanelWidget="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" "
+VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/VehicleTemplate/Blueprints/VehicleUI
@@ -2557,4 +2568,18 @@ LastLogListing=SourceControl
 
 [OutputLog]
 PreferredCommandExecutor=Cmd
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=True
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
