kolor asfaltu wszędzie taki sam

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -117,13 +117,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1891,Y=1488)
+LastSize=(X=1900,Y=1488)
 LastExecutedLaunchDevice=Windows@DESKTOP-D436PMB
 LastExecutedLaunchName=DESKTOP-D436PMB
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1891
+NewWindowWidth=1900
 NewWindowHeight=1488
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=354,Y=72)
@@ -230,7 +230,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets/Concrete_Barrier_sdsbo
+ContentBrowserDrawer.SelectedPaths=/Game/RacingGame/Checkpoints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1319,6 +1319,16 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+LandscapeSplinesComponent.TransformCommon=True
+LandscapeSplinesComponent.HLOD=True
+LandscapeSplinesComponent.Physics=True
+LandscapeSplinesComponent.Collision=True
+LandscapeSplinesComponent.Lighting=True
+LandscapeSplinesComponent.Rendering=True
+LandscapeSplinesComponent.Navigation=True
+LandscapeSplinesComponent.Tags=True
+LandscapeSplinesComponent.Activation=True
+LandscapeSplinesComponent.Cooking=True
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1645,7 +1655,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=180.000 Y=162.667
-WindowSize=X=1294.000 Y=734.000
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2749,9 +2759,12 @@ GameplayDebuggerUserSettings=True
 GameplayTagsDeveloperSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Megascans/Surfaces/Rough_Asphalt_vlpqdf1/T_RoughAsphalt_vlpqdf1_1K_ORDp.T_RoughAsphalt_vlpqdf1_1K_ORDp;
+RecentlyPlaced=/Game/Megascans/Surfaces/Rough_Asphalt_vlpqdf1/MI_Rough_Asphalt_vlpqdf1_1K.MI_Rough_Asphalt_vlpqdf1_1K;
+RecentlyPlaced=/Game/Track/M_Track.M_Track;
+RecentlyPlaced=/Game/Megascans/3D_Assets/Concrete_Barrier_sdsbo/MI_Concrete_Barrier_sdsbo_1K.MI_Concrete_Barrier_sdsbo_1K;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Concrete_Barrier_sdsbo/S_Concrete_Barrier_sdsbo_lod5.S_Concrete_Barrier_sdsbo_lod5;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Cement_Curbs_sepxS/MI_Cement_Curbs_sepxS_1K.MI_Cement_Curbs_sepxS_1K;
-RecentlyPlaced=/Game/Megascans/Surfaces/Rough_Asphalt_vlpqdf1/MI_Rough_Asphalt_vlpqdf1_1K.MI_Rough_Asphalt_vlpqdf1_1K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Concrete_Floor_wirkdfrn/MI_Concrete_Floor_wirkdfrn_1K.MI_Concrete_Floor_wirkdfrn_1K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Damaged_Road_vfyheb3/MI_Damaged_Road_vfyheb3_1K.MI_Damaged_Road_vfyheb3_1K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Rough_Asphalt_ulsidirew/MI_Rough_Asphalt_ulsidirew_1K.MI_Rough_Asphalt_ulsidirew_1K;
